fix: Improved collapsing css by modulize

--- a/src/modal/modalAddToFolder.module.css
+++ b/src/modal/modalAddToFolder.module.css
@@ -90,7 +90,7 @@
   justify-content: center;
 }
 
-.action-button {
+.action__button {
   display: flex;
   justify-content: center;
   align-items: center;
